--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,5 +18,5 @@
   "host_permissions": [
     "<all_urls>"
   ],
-  "update_url": "https://lemon-bush-00c9e2603.3.azurestaticapps.net/manifest.xml"
+  "update_url": "https://lemon-bush-00c9e2603.3.azurestaticapps.net/enterprise-example-ext/updates.xml"
 }
